--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter 
   cupertino_icons: ^1.0.8
   json_annotation: ^4.9.0
   http: ^0.13.6
+  intl: ^0.19.0
   
 
 dev_dependencies:
