--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   flutter_native_splash: ^2.4.0
   flutter_riverpod: ^2.5.1
+  flutter_form_builder: ^9.1.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
