--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   flutter_native_splash: ^2.4.0
   flutter_riverpod: ^2.5.1
   flutter_form_builder: ^9.1.1
+  another_flushbar: ^1.10.24
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
