--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   flutter_riverpod: ^2.5.1
   flutter_form_builder: ^9.1.1
   another_flushbar: ^1.10.24
+  flutter_notification_listener: ^1.3.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
