--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
 		-->
 		<meta-data android:name="flutterEmbedding" android:value="2" />
 		<!-- servicio notificaciones -->
-		<service android:name="im.zoe.labs.flutter_notification_listener.NotificationsHandlerService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" android:exported="true" android:label="Notification Listener">
+		<service android:name="im.zoe.labs.flutter_notification_listener.NotificationsHandlerService" 
+		android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" android:exported="true" android:label="Notification Listener">
 			<intent-filter>
 				<action android:name="android.service.notification.NotificationListenerService" />
 			</intent-filter>
