--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^0.13.6
   intl: ^0.19.0
+  flutter_notification_listener:
+    git:
+      url: https://github.com/HENRY1499/flutter_notification_listener.git
+      ref: master
   
 
 dev_dependencies:
@@ -54,7 +58,7 @@ dev_dependencies:
   flutter_riverpod: ^2.5.1
   flutter_form_builder: ^9.1.1
   another_flushbar: ^1.10.24
-  flutter_notification_listener: ^1.3.4
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
