--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^0.13.6
   intl: ^0.19.0
+  lottie: ^2.7.0
   
 
 dev_dependencies:
@@ -67,6 +68,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lotties/Wallet.json
+    - assets/lotties/CountTotal.json
     - assets/
   fonts:
     - family: Montserrat
