--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- captar notificaciones -->
-	<uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
-	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<!-- captar notificaciones -->
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="prueba_tecnica" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
 		<activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:taskAffinity="" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
 			<!--
@@ -23,14 +19,6 @@
 		This is used by the Flutter tool to generate GeneratedPluginRegistrant.java
 		-->
 		<meta-data android:name="flutterEmbedding" android:value="2" />
-		<!-- servicio notificaciones -->
-		<service android:name="im.zoe.labs.flutter_notification_listener.NotificationsHandlerService" 
-		android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" android:exported="true" android:label="Notification Listener">
-			<intent-filter>
-				<action android:name="android.service.notification.NotificationListenerService" />
-			</intent-filter>
-		</service>
-		<!-- servicio notificaciones -->
 	</application>
 	<!--
 	Required to query activities that can process text, see:
