--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,13 @@ dev_dependencies:
   flutter_riverpod: ^2.5.1
   flutter_form_builder: ^9.1.1
   another_flushbar: ^1.10.24
+  flutter_launcher_icons: ^0.14.4
+
+# Flutter Icon App
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/Icon.png"
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
